# publicstuff

boids/: KDTree2d.hs  Makefile  Vec2.hs  boids.hs
dla3d/: build.sh  c-version.kdtrc  params.in  tester.hs
dla3d/c/: Makefile  README.txt  cycle.h  dla.c  dla.h  example.kdtrc  kdtree.c  kdtree.h  params.c  params.h  vecmath.c  vecmath.h
dla3d/c_algebra/: dla.c  example.kdtrc  kdtree.c  main.c  mt-wrap.c  mt-wrap.h  vecmath.c  vecmath.h
dla3d/optimized-haskell1/DLA/: Driver.hs  Vec3.hs
dla3d/optimized-haskell2/: LICENSE
dla3d/optimized-haskell2/DLA/: ConfigurationReader.hs  KDTree.hs  Vec3.hs
dla3d/optimized-haskell3/: params.in
dla3d/optimized-haskell3/DLA/: Driver.hs  KDTree.hs  Params.hs
dla3d/optimized-haskell4/: DLA.cabal
dla3d/optimized-haskell4/DLA/: Rmonad.hs  Vec3.hs
dla3d/optimized-haskell5/: DLA.cabal
dla3d/optimized-haskell5/DLA/: KDTree.hs  Vec3.hs
dla3d/optimized-haskell6/: params.in
dla3d/optimized-haskell6/DLA/: ConfigurationReader.hs  Vec3.hs
dla3d/optimized-haskell7/DLA/: KDTree.hs  Vec3.hs
dla3d/unoptimized-haskell/: params.in
dla3d/unoptimized-haskell/DLA/: Driver.hs  Rmonad.hs  Vec3.hs
dla3d/vectest/: Driver.hs  Rmonad.hs  Vec3.hs
forestfire/: ForestFire.hs  ForestFire.nb  README  ff.hs  forestfire.m
ng/: MonteCarloMonad.hs  ng.hs  ng_io.hs
pendulum/: pendu.hs
sudoku_sat/: Sudoku SAT.nb
timing_helper/: timing_helper.hs
